youfull/objects/ECard_History__c.object
<CustomObject>
    <fields>
        <fullName>DetailSubject__c</fullName>
        <description>Detail Subject for long template name</description>
        <label>DetailSubject</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Failed_Count__c</fullName>
        <label>Failed Count</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Failed__c</fullName>
        <label>Failed</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>No_Email_Count__c</fullName>
        <label>No Email Count</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Email__c</fullName>
        <label>No Email</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Personal_Ecard_Message__c</fullName>
        <label>Personal Ecard Message</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Success_Count__c</fullName>
        <label>Success Count</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Success__c</fullName>
        <label>Success</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Total_Success_and_Failed__c</fullName>
        <formula>Failed_Count__c + Success_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total (Success and Failed)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ECard History</label>
    <listViews>
        <fullName>Todays_report</fullName>
        <columns>NAME</columns>
        <columns>Failed_Count__c</columns>
        <columns>Success_Count__c</columns>
        <columns>Failed__c</columns>
        <columns>Success__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Todays report</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>ECard Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ECard Histories</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>